# code/iginx-assoc-backend/src/main/java/com/xmu/iginx/assoc/modules/external/enums/ExternalJobType.java
@@ -1,0 +1,8 @@
+package com.xmu.iginx.assoc.modules.external.enums;
+
+public enum ExternalJobType {
+    MODEL_CALL,
+    ALGORITHM_CALL,
+    DATA_IMPORT,
+    DATA_EXPORT
+}
